<resources>

    <string name="app_name">Bike Bean</string>

    <!-- navigation drawer -->
    <string name="drawer_title_maps">Karte</string>
    <string name="drawer_title_wifi">WLAN-Ortung</string>
    <string name="drawer_title_sms_history">SMS Historie</string>
    <string name="drawer_title_history_position">Standort-Historie</string>
    <string name="drawer_title_history_battery">Batterie-Historie</string>
    <string name="drawer_title_preferences">Einstellungen</string>
    <string name="drawer_title_info_help">Infos &amp; Hilfe</string>



    <!-- headings -->
    <string name="heading_initialization">Einrichtung</string>
    <string name="heading_welcome">Willkommen!</string>
    <string name="heading_location">Standort</string>
    <string name="heading_battery">Batterie</string>
    <string name="heading_settings">Einstellungen</string>
    <string name="heading_wifi">WLAN Status</string>
    <string name="heading_interval">Intervall</string>
    <string name="heading_warning_number">Warn-Nummer</string>



    <!-- button texts -->
    <string name="button_get_location">Abfragen</string>
    <string name="button_to_map">Zur Karte</string>
    <string name="button_route">Route</string>
    <string name="button_more_information">Mehr Informationen</string>
    <string name="button_set_warning_number">Einstellen</string>
    <string name="button_share">Teilen</string>
    <string name="button_send_sms">Senden</string>
    <string name="button_reset">Zurücksetzen</string>
    <string name="button_ok">OK</string>
    <string name="button_continue">Fortfahren</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_send_log">Fehlerprotokoll senden</string>
    <string name="button_download">Herunterladen</string>
    <string name="button_update">Update</string>
    <string name="button_history">Historie anzeigen</string>
    <string name="button_update_cancel">Jetzt nicht</string>
    <string name="button_mapbox_agree">Zustimmen</string>
    <string name="button_mapbox_disagree">Ablehnen</string>
    <string name="button_mapbox_more_info">Mehr Darüber</string>



    <!-- content description -->
    <string name="description_last_updated">Letzte Aktualisierung:</string>
    <string name="description_navigation">Navigation header</string>
    <string name="description_map_type">MapType</string>

    <!-- Toast messages -->
    <string name="toast_db_reset">Datenbank zurückgesetzt</string>
    <string name="toast_sms_permission">Bitte Berechtigungen für SMS vergeben!</string>



    <!-- initial configuration UI -->
    <string name="subtitle_initial_configuration">Nimm hier die ersten
        Schritte zur Einrichtung deiner Bike Bean vor!
    </string>

    <!-- status fragment UI -->
    <string name="text_pending">Erwarte Bestätigung in ca. %s h (%s)</string>
    <string name="text_overdue">Bestätigung überfällig! (%s)</string>
    <string name="text_no_data">Keine Daten vorhanden!</string>
    <string name="title_error_sms_permission">Achtung!</string>
    <string name="text_error_sms_permission">Die App hat keine Berechtigungen für Sms.
        Diese Informationen sind eventuell veraltet oder falsch.
        Aktiviere die Berechtigungen in den App-Einstellungen.
    </string>
    <string name="text_to_settings">Zu den Einstellungen</string>

    <!-- location UI -->
    <string name="text_lat">Lat: </string>
    <string name="text_lng">Lng: </string>
    <string name="text_acc">+/-: </string>
    <string name="text_help_location">Hier kannst Du den Standort deiner
        Bike Bean abfragen.
    </string>

    <!-- battery UI -->
    <string name="text_charge_state">Ladezustand:</string>
    <string name="text_estimated_remaining">Es verbleiben noch
        etwa %s bis 10%% Ladezustand%s.
    </string>
    <string name="text_battery_warning">Unter 10%%, bitte umgehend aufladen!</string>
    <string name="text_last_known">Der letzte gemeldete Ladezustand war %s.</string>
    <string name="text_explanation_charge">Dieser Wert ist eine Schätzung des Ladezustands
        basierend auf der letzten Meldung und den aktuellen Einstellungen.
    </string>
    <string name="text_help_battery">Hier kannst Du den Akkustand abfragen falls
        die letzte Aktualisierung länger her ist.
    </string>

    <!-- settings UI -->
    <string name="text_help_settings">Hier kannst Du verschiedene Einstellungen der Bike Bean vornehmen
        (Siehe Hilfe-Button bei den einzelnen Einstellungen).
    </string>

    <!-- wifi UI -->
    <string name="text_wifi_on_transition">Wird eingeschaltet</string>
    <string name="text_wifi_off_transition">Wird ausgeschaltet</string>
    <string name="text_wifi_summary_on">Bike Bean strahlt WLAN aus.\nACHTUNG:
        Die Batterielaufzeit der Bike Bean wird stark reduziert!
    </string>
    <string name="text_wifi_summary_off">Bike Bean strahlt aktuell kein WLAN aus.</string>
    <string name="text_help_wifi">Hier kannst Du das WLAN der Bike Bean einstellen.
        Dies solltest Du nur für die Nahortung tun!
    </string>

    <!-- interval UI -->
    <string name="text_interval_transition">Wird auf %dh umgestellt</string>
    <string name="text_interval_summary">Bike Bean wird alle %sh neue Nachrichten prüfen.</string>
    <string name="text_help_interval">Hier kannst Du das Antwortintervall der Bike Bean einstellen.
            Beachte, dass kürzere Intervalle deine Akkulaufzeit verringern.
    </string>

    <!-- warningNumber UI -->
    <string name="text_warning_number_pending">Wird neu gesetzt</string>
    <string name="text_warning_number_not_set">Nicht gesetzt</string>
    <string name="text_help_warning_number">Wenn Du Warnungen über einen niedrigen Batterie-Status der
        Bike Bean erhalten möchtest, kannst Du das hier tun.\nWenn Du auf "Einstellen" drückst,
        wird deine jetztige Telefonnummer als Warn-Nummer in der Bike Bean
        eingespeichert.\n\nBei einem Akkustand von 20% und 10% wird jeweils einmal gewarnt.
    </string>



    <!-- Map UI -->
    <string name="menu_satellite">Satellit</string>
    <string name="menu_hybrid">Hybrid</string>
    <string name="menu_normal">Normal</string>



    <!-- wifi scan UI -->
    <string name="text_scanning_wifi">Scanne WLANs</string>
    <string name="text_phone_hint">+4912345678910</string>
    <string name="text_scan_wifi">WLANs SCANNEN</string>
    <string name="text_wifi_not_found">BIKEBEAN-WIFI WURDE NICHT GEFUNDEN</string>
    <string name="text_gps_network_not_enabled">Dein Standort muss leider aktiviert sein
        um nach WLANs scannen zu können. (Google Anforderung)
    </string>



    <!-- Preferences -->
    <!-- Pref Category headers -->
    <string name="header_general">Bike Bean Einstellungen</string>
    <string name="header_ui">Design</string>
    <string name="header_app">App Einstellungen</string>

    <!-- Pref titles -->
    <string name="pref_number">Telefonnummer der Bike Bean</string>
    <string name="pref_name">Anzeigename</string>
    <string name="pref_theme">Thema</string>
    <string name="pref_internationalization">Sprache</string>
    <string name="pref_db_reset">Datenbank zurücksetzen</string>
    <string name="pref_mapbox_telemetry">Mapbox Telemetrie</string>

    <!-- Pref key -->
    <string name="pref_number_key">number</string>
    <string name="pref_name_key">name</string>
    <string name="pref_theme_key">thema</string>
    <string name="pref_internationalization_key">language</string>
    <string name="pref_db_reset_key">reset</string>
    <string name="pref_mapbox_telemetry_key">mapbox_telemetry</string>



    <!-- Dialogs -->
    <!-- sms send warn dialog -->
    <string name="message_sms_send">Achtung! Es wird eine
        SMS an Bike Bean gesendet um den Befehl zu übertragen.
        Dies kann Kosten des Netzbetreibers verursachen!
    </string>

    <!-- sms send warn dialog -->
    <string name="message_sms_pending">Es wurde bereits eine Abfrage gesendet, bei der noch
        auf Antwort gewartet wird. Möchtest Du trotzdem eine neue Abfrage starten?
    </string>

    <!-- log upload dialog -->
    <string name="message_upload_log">Beschreibe kurz, was nicht funktioniert!
        Deine Log-Dateien werden zu Github hochgeladen, damit wir den
        Fehler beheben können. Anschließend werden sie gelöscht.
    </string>
    <string name="dialog_edittext_hint">Fehlerbeschreibung</string>

    <!-- number edit text preference -->
    <string name="message_pref_number">Bitte mit Ländercode (z.B. +49 für Deutschland) eingeben"
    </string>
    <string name="message_pref_number_no_blanks">Nummer darf keine Leerzeichen enthalten,
        Leerzeichen wurden automatisch gelöscht</string>
    <string name="message_pref_number_empty">Nummer darf nicht leer sein!</string>

    <!-- mapbox telemetry dialog -->
    <string name="title_mapbox_telemetry">Hilf mit, Mapbox besser zu machen</string>
    <string name="message_mapbox_telemetry">Bike Bean verwendet Mapbox als
        Kartenanbieter.\n\nDu kannst OpenStreetMap und Mapbox-Karten besser machen,
        indem Du anonyme Nutzungsdaten beisteuerst.
    </string>
    <string name="text_error_no_browser">Auf deinem Gerät ist kein Webbrowser
        installiert, Website kann nicht geöffnet werden!
    </string>

    <!-- db reset dialog -->
    <string name="message_db_reset">Dadurch werden alle Daten zurückgesetzt und vom
        bisherigen SMS-Verlauf neu eingelesen. Fortfahren?
    </string>

    <!-- version check dialog -->
    <string name="title_update">Update verfügbar</string>
    <string name="message_update_1">Es ist eine neue Version der App verfügbar (</string>
    <string name="message_update_2">). Möchtest Du sie herunterladen?</string>

    <!-- permission rationale dialog -->
    <!-- sms permission -->
    <string name="title_permission_sms">SMS Berechtigungen</string>
    <string name="message_permission_sms">Damit diese App richtig funktioniert, muss sie SMS
        an Bike Bean lesen und versenden können.
        Es werden nur SMS von und an Bike Bean gelesen.\nBitte
        vergib die Berechtigungen für SMS.
    </string>

    <!-- map permission -->
    <string name="title_permissions_map">Standort-Berechtigungen</string>
    <string name="message_permission_map">Die App benötigt Berechtigungen um Ihren eigenen
        Standort auf der Karte anzuzeigen.
    </string>

    <!-- generic permission -->
    <string name="title_permission_generic">Berechtigungen</string>
    <string name="message_permission_generic">Die App benötogt weitere Berechtigungen!</string>



    <!-- urls -->
    <string name="url_geolocation" translatable="false">https://www.googleapis.com/geolocation/v1/geolocate?key=</string>
    <string name="url_github_releases" translatable="false">https://api.github.com/repos/bike-bean/BikebeanApp/releases</string>
    <string name="url_github_gists" translatable="false">https://api.github.com/gists</string>

    <!-- mapbox attribution html -->
    <string name="text_attribution_mapbox">© Mapbox</string>
    <string name="url_attribution_mapbox">https://www.mapbox.com/about/maps/</string>
    <string name="text_attribution_osm">© OpenStreetMap</string>
    <string name="url_attribution_osm">http://www.openstreetmap.org/about/</string>
    <string name="text_attribution_mapbox_improve">Karte verbessern</string>
    <string name="url_attribution_mapbox_improve">https://www.mapbox.com/map-feedback/</string>

    <!-- tokens -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1Ijoiam9qbzI0MyIsImEiOiJja2xwMm9sN3gwaHMyMm5ud2ZzYmNxaGRpIn0.-XhYvIRw2vRgUMF3BqsCXg</string>

    <!-- unused?? -->
    <string name="error_log">Fehlerprotokoll</string>

</resources>
