<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?attr/shapeAppearanceMediumComponent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/fragment_vertical_margin">

        <TextView
            android:id="@+id/smsIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceUnemphasized" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fragment_horizontal_margin" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:text="@string/text_lat" />

                    <TextView
                        android:id="@+id/lat2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody1" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_lng"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/lng2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody1" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_acc"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/acc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?attr/textAppearanceBody1" />
                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight=".1" />

            <androidx.cardview.widget.CardView
                android:id="@+id/buttonOpenMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <TextView
                    android:contentDescription="@string/button_to_map"
                    app:drawableStartCompat="@drawable/ic_map_white_24dp"
                    android:text="@string/button_to_map"
                    style="@style/Widget.BikeBean.Button.FakeButton" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/dateTimeText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAppearance="?attr/textAppearanceUnemphasized" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
